--- a/prework-study-guide/prework-study-guide/index.html
+++ b/prework-study-guide/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -26,7 +27,11 @@
       <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>A margin indicates how much space we want around the outside an element</li>
+        <li>A padding indicates how much space we want around the content inside an element</li>
+        <li>The most common way to style a webpage is by using an external CSS style sheet</li>
+        <li>Determines the style of the webpage in order to make it visually appealing</li>
+        <li>Can make a website simpler to use with polished design and cosistent organization</li>
       </ul>
       </section>
       
