--- a/prework-study-guide/prework-study-guide/index.html
+++ b/prework-study-guide/prework-study-guide/index.html
@@ -50,7 +50,11 @@
       <section class="card" id="javascript-section">
       <h2>Javascript</h2>
       <ul>
-        <li>Enter your Javascript notes here</li>
+        <li>A variable is a named container that allows us to store data in our code</li>
+        <li>Control flow is the order in which a computer executes code in a script</li>
+        <li>When an if statement is encountered it will check to see if a statement is truthy</li>
+        <li>Strings need to be contained in quotation marks, numbers and Boolean values do not</li>
+        <li>Arrays are zero-indexed and sequential, the first item in any array has an idex of 0</li>
       </ul>
       </section>
     </main>
